# kuber-django

./: .gitignore  Dockerfile  README.md  pyproject.toml
api/api/: settings.py  urls.py
kubernetes/: Chart.yaml  django.yml  postgres.values  postgres.yml  values.yaml
kubernetes.old/: values.yaml
kubernetes.old/templates/: deployment.yaml  service.yaml
kubernetes/templates/: deployment.yaml  ingress.yaml  secrets.yaml  service.yaml  statefulset.yaml  volume.yaml
